bpo-34672: Try to pass the C library's own timezone strings back to it.